- Stockable Shops is still broken :( it's gone now