@@ -1,8 +1,8 @@
 displayName = Verdant
 author = GabeHasWon
-version = 1.2.5.4
+version = 1.2.5.5
 dllReferences = StructureHelper, NetEasy_v0.1.8, NetSerializer
-modReferences = StockableShops
+weakReferences = StockableShops@1.1
 hideCode = false
 hideResources = false
 includeSource = true
