@@ -1,1 +1,5 @@
-- Stockable Shops is still broken :( it's gone now
+- Made Stockable Shops a weak reference (which means optional)
+- Adjusted code to make the above work as it didn't before
+- Fixed Pickipuffs not syncing in multiplayer
+- Fixed Verdant Grass 1x2 growth replacing tiles in some occasions
+- Changed Verdant Biome priority to BiomeMedium
